Retirado o método de busca pelo endereço, acrescentado o método de busca pelo CEP e concluído todos os testes